--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -3,11 +3,17 @@
   <div class="width-70">
   </div>
 </div>
-<div class="board-container">
+<div class="column width-100" *ngIf="loading">
+  <div class="row row-margin hv100">
+    <mat-spinner></mat-spinner>
+  </div>
+</div>
+<div class="board-container" *ngIf="!loading">
   <!--USER LIST-->
   <div class="left-container width-15" *ngIf="user.Type === 1">
     <div class="button-wrapper">
-      <button mat-raised-button color="primary" class="button-main-menu width-100" [routerLink]="['/messages']">Messages</button>
+      <button mat-raised-button color="primary" class="button-main-menu width-100"
+        [routerLink]="['/messages']">Messages</button>
     </div>
     <div class="button-wrapper">
       <button mat-raised-button color="primary" class="button-main-menu width-100" [routerLink]="['/my-listings']">My
@@ -25,13 +31,8 @@
         [routerLink]="['/admin-dashboard']">Dashboard Users</button>
     </div>
   </div>
-  <div class="column width-70" *ngIf="loading">
-    <div class="row row-margin background-filter hv100">
-      <mat-spinner></mat-spinner>
-    </div>
 
-  </div>
-  <div class="column width-70" *ngIf="!loading">
+  <div class="column width-70">
     <!--USER INFO-->
     <div class="row row-margin background-filter">
       <div class="column padding width-80">
