add back filters + home page endpoint

--- a/src/app/modules/add-listing/add-listing.component.html
+++ b/src/app/modules/add-listing/add-listing.component.html
@@ -7,7 +7,7 @@
         <div [routerLink]="['/add-listing/rent-house']">
             <app-card cardBgImage="rent-house" cardText="Rent Your House"></app-card>
         </div>
-        <div [routerLink]="['/add-listing/rent-house-room']">
+        <div [routerLink]="['/add-listing/rent-room']">
             <app-card cardBgImage="rent-room" cardText="Rent Your Room"></app-card>
         </div>
     </div>
