--- a/src/app/shared/component/property-frame/property-frame.component.html
+++ b/src/app/shared/component/property-frame/property-frame.component.html
@@ -1,8 +1,11 @@
 <div class="card">
   <div class="card-container">
-    <div *ngIf="property" class="card-image">
+    <div *ngIf="property && !loading" class="card-image">
       <app-carousel [items] = "items"></app-carousel>
     </div>
+    <div *ngIf=loading class="loading">
+      <mat-spinner ></mat-spinner>
+  </div>
 
     <div *ngIf="property" class="card-container-content">
       <div class="price">{{property.Price}} €</div>
