--- a/src/app/shared/component/property-frame/property-frame.component.scss
+++ b/src/app/shared/component/property-frame/property-frame.component.scss
@@ -10,6 +10,14 @@
     height: 100%;
 }
 
+.loading {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 .card-container-content {
     display: flex;
     flex-direction: column;
