--- a/src/app/shared/component/map-container/map/map.component.html
+++ b/src/app/shared/component/map-container/map/map.component.html
@@ -2,8 +2,7 @@
     <div id="map"
          leaflet
          (leafletMapReady)="initializeMap($event)"
-         [leafletOptions]="options"
-         (leafletClick)="onMapClick($event)">
+         [leafletOptions]="options">
       <!-- <div class="leaflet-bottom leaflet-left">
         <app-geocoding (onSearch)="refreshSearchList($event)"></app-geocoding>
       </div> -->
