--- a/src/app/modules/private/my-listings/my-listings.component.html
+++ b/src/app/modules/private/my-listings/my-listings.component.html
@@ -1,4 +1,4 @@
-<div class="row custom">
+<div class="row-custom">
     <div class="column width-15">
         <div class="button-wrapper">
             <button mat-raised-button class="button-main-menu width-100" [routerLink]="['/userboard']">Back</button>
@@ -6,26 +6,11 @@
     </div>
     <div class="column width-70">
 
-        <div class=row>
-            <div class="card" *ngFor="let property of listedProperties; index as i">
-                <div class="card-image">
-                    <img [src]="image" width="100%" height="100%">
-                </div>
-                <div> {{property.Price}}</div>
-                <div class="full-width space-between">
-                    <div class="button-margin full-width">
-                        <button class="full-width button-blue" mat-raised-button (click)="edit(property.Id)"> Edit
-                        </button>
-                    </div>
-                    <div class="button-margin full-width">
-                        <button class="full-width button-orange" mat-raised-button> Deactivate </button>
-                    </div>
-                    <div class="button-margin full-width">
-                        <button class="full-width button-red" mat-raised-button (click)="delete(property.Id, i)"> Delete
-                        </button>
-                    </div>
-                </div>
+        <div class=row *ngFor="let property of listedProperties; index as i">
+            <div class="card-wrapper">
+                <app-card [property]="property"></app-card>
             </div>
+            
         </div>
 
 
