--- a/src/app/modules/private/my-listings/my-listings.component.scss
+++ b/src/app/modules/private/my-listings/my-listings.component.scss
@@ -1,57 +1,15 @@
-.custom {
-    height: 80vh;
+.border-box {
+   display: block;
 }
 
-.card {
+.card-wrapper {
     width: 100%;
-    height: 200px;
-    width: 300px;
-    margin: 5px;
-    border-radius: 15px;
-    padding-bottom: 5px;
 }
 
-.card-image {
-    height: 70%;
-    img {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-    }
-}
-
-.button-margin {
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-.space-between{
+.row-custom {
     display: flex;
-    flex-direction: row;            
-    flex-wrap: nowrap;             
-    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
 }
 
-.button-blue {
-    border-radius: 25px;
-    height: 35px;
-    background-color: blue;
-    color: white;
-    margin-right: 5px;
-}
-
-.button-orange {
-    border-radius: 25px;
-    height: 35px;
-    background-color: rgb(85, 85, 250);
-    color: white;
-    margin-right: 5px;
-}
-
-.button-red {
-    border-radius: 25px;
-    height: 35px;
-    background-color: black;
-    color: white;
-    margin-right: 5px;
-}
 
